[gd_scene load_steps=8 format=2]

[ext_resource path="res://LevelAssets/Carnevalee Freakshow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://LevelScenes/Pause.gd" type="Script" id=2]
[ext_resource path="res://LevelScenes/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/SFX/MenuHover.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/MenuClick.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[node name="Pause" type="Node2D"]
pause_mode = 2
z_index = 9
script = ExtResource( 2 )

[node name="ResumeButton" type="Button" parent="."]
margin_right = 51.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( -104, -37 )
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="OptionsButton" type="Button" parent="."]
margin_top = 28.0
margin_right = 51.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( -104, -37 )
custom_fonts/font = SubResource( 1 )
text = "Options"

[node name="MainMenuButton" type="Button" parent="."]
margin_top = 55.0
margin_right = 51.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( -61, -26 )
custom_fonts/font = SubResource( 1 )
text = "Main Menu"

[node name="OptionsMenu" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -123, -37 )

[node name="Label" type="Label" parent="."]
margin_left = -7.0
margin_top = -38.0
margin_right = 60.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 2 )
text = "Paused"

[node name="MenuHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.612
bus = "SFX"

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -13.109
bus = "SFX"

[connection signal="mouse_entered" from="ResumeButton" to="." method="_on_ResumeButton_mouse_entered"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="mouse_entered" from="OptionsButton" to="." method="_on_OptionsButton_mouse_entered"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="MainMenuButton" to="." method="_on_MainMenuButton_mouse_entered"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
